[gd_scene load_steps=2 format=3 uid="uid://ciy2rb4j0ik2u"]

[ext_resource type="Script" path="res://core/nodes/spread.gd" id="1_vyvtq"]

[node name="Spread" type="GraphNode"]
title = "Деление"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_vyvtq")

[node name="SpinBox" type="SpinBox" parent="."]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
allow_greater = true

[connection signal="slot_removed" from="." to="." method="_on_slot_removed"]
[connection signal="slot_updated" from="." to="." method="_on_slot_updated"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
